// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatZodError: formats array schema with additional options 1`] = `
"[ 1, 2, 3, 4, 5 ]
^ Array must contain at most 3 element(s)"
`;

exports[`formatZodError: formats array schema with array input 1`] = `
"[
  ...,
  /* [2] */ '3',
            ^ Expected number, received string
  ...,
  /* [5] */ false,
            ^ Expected number, received boolean
]"
`;

exports[`formatZodError: formats array schema with primitive input 1`] = `
"1
^ Expected array, received number"
`;

exports[`formatZodError: formats custom message schema 1`] = `
"{
  a: Symbol(kOoh),
     ^ Custom message
       with multiple
       lines
}"
`;

exports[`formatZodError: formats deeply nested schema 1`] = `
"{
  a: '1',
     ^ Expected number, received string
  b: {
    c: 2,
       ^ Expected string, received number
    d: [
      ...,
      /* [1] */ {
        e: 42,
           ^ Expected boolean, received number
      },
      /* [2] */ false,
                ^ Expected object, received boolean
      /* [3] */ {
        e: undefined,
           ^ Required
      },
    ],
    f: [Function: f],
       ^ Expected array, received function
  },
  g: undefined,
     ^ Required
}"
`;

exports[`formatZodError: formats discriminated union schema 1`] = `
"{
  ...,
  a: false,
     ^ Expected number, received boolean
}"
`;

exports[`formatZodError: formats discriminated union schema with invalid discriminator 1`] = `
"{
  type: 'c',
        ^ Invalid discriminator value. Expected 'a' | 'b'
}"
`;

exports[`formatZodError: formats intersection schema 1`] = `
"false
^ Expected number, received boolean
  Invalid literal value, expected 2"
`;

exports[`formatZodError: formats large actual values 1`] = `
"{
  a: {
    b: [
          0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10,
         11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21,
         22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32,
         33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,
         44, 45, 46, 47, 48, 49
       ],
       ^ Expected string, received array
  },
}"
`;

exports[`formatZodError: formats object schema with additional options 1`] = `
"{ a: 1, b: 2 }
^ Unrecognized key(s) in object: 'b'"
`;

exports[`formatZodError: formats object schema with object input 1`] = `
"{
  ...,
  b: '2',
     ^ Expected number, received string
  ...,
  g: '7',
     ^ Expected boolean, received string
  f: undefined,
     ^ Required
}"
`;

exports[`formatZodError: formats object schema with primitive input 1`] = `
"true
^ Expected object, received boolean"
`;

exports[`formatZodError: formats object union schema 1`] = `
"{
  key: false,
       ^ Expected string, received boolean
  objects: [
    /* [0] */ false,
              ^ Expected object, received boolean
    ...,
    /* [2] */ {
      a: undefined,
         ^1 Required *or*
      b: undefined,
         ^1 Required *or*
      c: undefined,
         ^1 Required
    },
    /* [3] */ [],
              ^ Expected object, received array
    /* [4] */ {
      ...,
      a: undefined,
         ^2 Required *or*
      b: undefined,
         ^2 Required *or*
      c: undefined,
         ^2 Required
    },
  ],
}"
`;

exports[`formatZodError: formats object union schema in colour 1`] = `
"[2m{[22m
  [2mkey: [22m[33mfalse[39m[2m,[22m
[31m       ^ Expected string, received boolean[39m
  [2mobjects: [[22m
    [2m/* [0] */ [22m[33mfalse[39m[2m,[22m
[31m              ^ Expected object, received boolean[39m
    [2m/* [1] */ {[22m
      [2ma: [22m[90mundefined[39m[2m,[22m
[33m         ^1 Required *or*[39m
      [2mb: [22m[90mundefined[39m[2m,[22m
[33m         ^1 Required *or*[39m
      [2mc: [22m[90mundefined[39m[2m,[22m
[33m         ^1 Required[39m
    [2m},[22m
    [2m/* [2] */ {[22m
      [2ma: [22m[90mundefined[39m[2m,[22m
[36m         ^2 Required *or*[39m
      [2mb: [22m[90mundefined[39m[2m,[22m
[36m         ^2 Required *or*[39m
      [2mc: [22m[90mundefined[39m[2m,[22m
[36m         ^2 Required[39m
    [2m},[22m
    [2m/* [3] */ {[22m
      [2ma: [22m[90mundefined[39m[2m,[22m
[34m         ^3 Required *or*[39m
      [2mb: [22m[90mundefined[39m[2m,[22m
[34m         ^3 Required *or*[39m
      [2mc: [22m[90mundefined[39m[2m,[22m
[34m         ^3 Required[39m
    [2m},[22m
    [2m/* [4] */ {[22m
      [2ma: [22m[90mundefined[39m[2m,[22m
[35m         ^4 Required *or*[39m
      [2mb: [22m[90mundefined[39m[2m,[22m
[35m         ^4 Required *or*[39m
      [2mc: [22m[90mundefined[39m[2m,[22m
[35m         ^4 Required[39m
    [2m},[22m
    [2m/* [5] */ {[22m
      [2ma: [22m[90mundefined[39m[2m,[22m
[32m         ^5 Required *or*[39m
      [2mb: [22m[90mundefined[39m[2m,[22m
[32m         ^5 Required *or*[39m
      [2mc: [22m[90mundefined[39m[2m,[22m
[32m         ^5 Required[39m
    [2m},[22m
    [2m/* [6] */ {[22m
      [2ma: [22m[90mundefined[39m[2m,[22m
[33m         ^6 Required *or*[39m
      [2mb: [22m[90mundefined[39m[2m,[22m
[33m         ^6 Required *or*[39m
      [2mc: [22m[90mundefined[39m[2m,[22m
[33m         ^6 Required[39m
    [2m},[22m
    [2m/* [7] */ {[22m
      [2ma: [22m[90mundefined[39m[2m,[22m
[36m         ^7 Required *or*[39m
      [2mb: [22m[90mundefined[39m[2m,[22m
[36m         ^7 Required *or*[39m
      [2mc: [22m[90mundefined[39m[2m,[22m
[36m         ^7 Required[39m
    [2m},[22m
  [2m],[22m
[2m}[22m"
`;

exports[`formatZodError: formats primitive schema with object input 1`] = `
"{ a: 1, b: [Object] }
^ Expected string, received object"
`;

exports[`formatZodError: formats primitive schema with primitive input 1`] = `
"false
^ Expected number, received boolean"
`;

exports[`formatZodError: formats tuple union schema 1`] = `
"{
  tuples: [
    /* [0] */ false,
              ^ Expected array, received boolean
    /* [1] */ { a: 1 },
              ^ Expected array, received object
    /* [2] */ [],
              ^ Array must contain at least 2 element(s)
                Array must contain at least 3 element(s)
    /* [3] */ [
      ...,
      /* [1] */ '3',
                ^ Expected number, received string
    ],
    /* [4] */ [
      /* [0] */ 4,
                ^1 Expected string, received number
                   Expected boolean, received number *or*
      /* [1] */ 5,
                ^1 Expected boolean, received number *or*
      /* [2] */ 6,
                ^1 Expected boolean, received number
    ],
    /* [5] */ [
      /* [0] */ true,
                ^2 Expected string, received boolean *or*
      /* [1] */ 7,
                ^2 Expected boolean, received number
      ...,
    ],
  ],
}"
`;

exports[`formatZodError: formats union schema 1`] = `
"'a'
^ Expected boolean, received string
  Invalid literal value, expected 1"
`;
